tests/errors/union_no_equal_err/union_no_equal_err.c
#error union_no_equal_err.union_no_equal_err:11:13 Equality is not defined for type: MyNode<unit -> int>
